Added GET for Wordpress JSON

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,11 +6,11 @@
 				<div class="row">
 					<div class="intro-content right large-8 columns">
 						<h1>
-							WE DESIGN, BUILD AND FIX DIGITAL APPLICATIONS.
-
+							<%= t('.hero.headline', :default => 'WE DESIGN, BUILD AND FIX DIGITAL APPLICATIONS.') %>
 						</h1>
 						<p class="sub-title">
-	Bendyworks is a multidisciplinary team of web artisans that collaborates with forward-thinking customers to turn innovative ideas into elegant digital applications that charm the people who use them.
+							<%= t('.hero.subheadline', :default => 'Bendyworks is a multidisciplinary team of web artisans that collaborates with forward-thinking customers to turn innovative ideas into elegant digital applications that charm the people who use them.') %>
+
 						</p>
 					</div>
 				</div>
